manifests/esphome/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: esphome
  labels:
    app: esphome
spec:
  selector:
    app: esphome
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 6052
      targetPort: 6052
